# keller-segel

./: CLAUDE.md  CMakeLists.txt  analysis.ipynb  keller_segel.py  pyproject.toml
src/ks_core/: bindings.cpp  ks_solver.cpp  ks_solver.hpp  sg_scheme.hpp
